Added readme file
Added read file and added some comments to ServerRouting.js to make it
clearer where to change the Port

--- a/views/books.html
+++ b/views/books.html
@@ -1,5 +1,5 @@
 
-<!--// This calls a remote RESTful API and therefore, it may take a while to load //-->
+<!--// This calls a remote RESTful API and therefore it may take a while to load //-->
 <article ng-app="booksInventoryApp">
   <section ng-controller="booksController">
     <h2 ng-repeat="book in data.books">{{book.name}}</h2>
